# tensorrt_my

./: .gitignore  CMakeLists.txt  README.md
include/: infer.h  yolo.h
src/: infer.cu  yolo.cu
src/demo/: config.h  main.cpp  myMain.cu
workspace/model/engine/: readme.md
workspace/model/onnx/: readme.md  v8trans.py
workspace/model/pt/: output.py  readme.md
workspace/model/transdOnnx/: onnx2engine  readme.md
